Fix word-wrap property for Safari

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -72,3 +72,9 @@
         }
     }
 }
+
+.article-content {
+    code {
+        word-wrap: unset;
+    }
+}
